# ClinicalCorporaWorkflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
FAIRClinicalWorkflow/: BioC_Utilities.py  DirectoryDifferences.py  FileExtensionAnalysis.py  MovieRemoval.py  NewFileExtensionAnalysis.py  PMC_BulkFilter.py  PMC_Titles_Filter.py  SIBiLS_sentence_splitter.py  SupplementaryDownloader.py  Workflow.py  WorkflowStats.py  __main__.py  file_versions.tsv  image_extractor.py  powerpoint_extractor.py
FAIRClinicalWorkflow/AC/: AutoCorpus.py  bioc_documents.py  bioc_formatter.py  bioc_passages.py  excel_extractor.py  file_extension_analysis.py  pdf_extractor.py  section.py  supplementary_processor.py  table.py  tableimage.py  word_extractor.py
Tests/: testOutputQuality.py  test_regression.py
