[project]
name = "FAIRClinicalWorkflow"
version = "2.0.0"
description = ""
authors = [{ name = "Thomas Rowlands", email = "thomas.rowlands@nottingham.ac.uk" }]
dependencies = [
    "aiosignal==1.3.1",
    "analytics-python==1.4.post1",
    "annotated-types==0.7.0",
    "backoff==1.10.0",
    "backports-tarfile==1.2.0",
    "bleach==6.1.0",
    "certifi==2024.6.2",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "docutils==0.20.1",
    "environs==9.5.0",
    "filelock==3.14.0",
    "filetype==1.2.0",
    "frozenlist==1.4.1",
    "fsspec==2024.6.0",
    "ftfy==6.2.0",
    "grpcio==1.64.1",
    "huggingface-hub==0.23.3",
    "idna==3.7",
    "importlib-metadata==8.2.0",
    "intel-openmp==2021.4.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==5.3.0",
    "jaraco-functools==4.0.2",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "keyring==25.3.0",
    "markdown-it-py==3.0.0",
    "marker-pdf==0.2.13",
    "markupsafe==2.1.5",
    "marshmallow==3.21.3",
    "mdurl==0.1.2",
    "mkl==2021.4.0",
    "monotonic==1.6",
    "more-itertools==10.3.0",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==1.26.4",
    "opencv-python==4.10.0.82",
    "packaging==24.1",
    "pdftext==0.3.10",
    "pillow==10.3.0",
    "pkginfo==1.11.1",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pydantic-settings==2.4.0",
    "pydub==0.25.1",
    "pygments==2.18.0",
    "pypdfium2==4.30.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.1",
    "pywin32-ctypes==0.2.2",
    "pyyaml==6.0.1",
    "rapidfuzz==3.9.3",
    "readme-renderer==41.0",
    "regex==2024.5.15",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==13.7.1",
    "safetensors==0.4.3",
    "scikit-learn==1.5.0",
    "scipy==1.13.1",
    "six==1.16.0",
    "sniffio==1.3.0",
    "surya-ocr==0.4.12",
    "sympy==1.12.1",
    "tabulate==0.9.0",
    "tbb==2021.13.0",
    "texify==0.1.9",
    "threadpoolctl==3.5.0",
    "tokenizers==0.19.1",
    "torch==2.3.1",
    "tqdm==4.66.4",
    "transformers==4.41.2",
    "twine==4.0.2",
    "typing-extensions==4.12.2",
    "urllib3==2.2.1",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "zipp==3.19.2"
]

[tool.uv]
managed = true
