[build-system]
requires = ["uv==0.6.4"]
build-backend = "uv"

[tool.uv]
preview = true
packages = [{ include = "FAIRClinicalWorkflow"}]
package = false

[project]
name = "FAIRClinicalWorkflow"
version = "2.0.0"
description = ""
authors = [
    { name = "Thomas Rowlands", email = "thomas.rowlands@nottingham.ac.uk" }
]
dependencies = [
    "aiosignal>=1.3.2",
    "analytics-python>=1.4.post1",
    "annotated-types>=0.7.0",
    "attrs>=25.1.0",
    "backports-tarfile>=1.2.0",
    "beautifulsoup4>=4.13.3",
    "bioc>=2.1",
    "bleach>=6.2.0",
    "cachetools>=5.5.2",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "docopt>=0.6.2",
    "docutils>=0.21.2",
    "environs>=14.1.1",
    "et-xmlfile>=2.0.0",
    "filelock>=3.17.0",
    "filetype>=1.2.0",
    "flatbuffers>=25.2.10",
    "frozenlist>=1.5.0",
    "fsspec>=2025.2.0",
    "ftfy>=6.3.1",
    "google-ai-generativelanguage>=0.6.16",
    "google-api-core>=2.24.1",
    "google-api-python-client>=2.162.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "googleapis-common-protos>=1.68.0",
    "grpcio>=1.70.0",
    "grpcio-status>=1.70.0",
    "httplib2>=0.22.0",
    "huggingface-hub>=0.29.1",
    "humanfriendly>=10.0",
    "idna>=3.10",
    "importlib-metadata>=8.6.1",
    "intel-cmplr-lib-ur>=2025.0.5",
    "intel-openmp>=2025.0.5",
    "intervaltree>=3.1.0",
    "jaraco-classes>=3.4.0",
    "jaraco-context>=6.0.1",
    "jaraco-functools>=4.1.0",
    "jinja2>=3.1.5",
    "joblib>=1.4.2",
    "jsonlines>=4.0.0",
    "keyring>=25.6.0",
    "lxml>=5.3.1",
    "markdown-it-py>=3.0.0",
    "markdown2>=2.5.3",
    "marker-pdf==1.5.5",
    "markupsafe>=3.0.2",
    "marshmallow>=3.26.1",
    "mdurl>=0.1.2",
    "mkl>=2025.0.1",
    "monotonic>=1.6",
    "more-itertools>=10.6.0",
    "mpmath>=1.3.0",
    "networkx>=3.4.2",
    "nh3>=0.2.21",
    "numpy>=2.2.3",
    "olefile>=0.47",
    "onnxruntime>=1.20.1",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "pdftext>=0.6.1",
    "pkginfo>=1.12.1.2",
    "proto-plus>=1.26.0",
    "protobuf>=5.29.3",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "pydub>=0.25.1",
    "pygments>=2.19.1",
    "pyparsing>=3.2.1",
    "pypdf2>=3.0.1",
    "pyreadline3>=3.5.4",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14",
    "python-pptx>=1.0.2",
    "pytz>=2025.1",
    "pywin32>=308",
    "pywin32-ctypes>=0.2.3",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.12.1",
    "readme-renderer>=44.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "rfc3986>=2.0.0",
    "rich>=13.9.4",
    "rsa>=4.9",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "soupsieve>=2.6",
    "tabulate>=0.9.0",
    "tbb>=2022.0.0",
    "tcmlib>=1.2.0",
    "threadpoolctl>=3.5.0",
    "tokenizers>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "twine>=6.1.0",
    "typing-extensions>=4.12.2",
    "tzdata>=2025.1",
    "umf>=0.9.1",
    "uritemplate>=4.1.1",
    "urllib3>=2.3.0",
    "wcwidth>=0.2.13",
    "webencodings>=0.5.1",
    "xlrd>=2.0.1",
    "xlsxwriter>=3.2.2",
    "zipp>=3.21.0",
    "rarfile>=4.2"
]